# Analysis-on-Approximated-Derivatives

Code_and_Data/: CMakeLists.txt  Derivative_Error.bash  OSQP_INSTALL_COMMANDS  README.md  Reviewer.txt  TrajOptKP_testing_data.bash
Code_and_Data/DerivativeErrorData/: plot_derivative_error.py  toy_contact.py
Code_and_Data/DerivativeErrorData/acrobot_2000_3/: SI10.csv  SI100.csv  SI1000.csv  SI2.csv  SI20.csv  SI200.csv  SI5.csv  SI500.csv  contact_change.csv  contact_change_dyn.csv
Code_and_Data/DerivativeErrorData/box_sweep_1500_3/: SI10.csv  SI100.csv  SI1000.csv  SI2.csv  SI20.csv  SI200.csv  SI5.csv  SI500.csv  contact_change.csv  contact_change_dyn.csv  contact_change_maxN.csv
Code_and_Data/DerivativeErrorData/impact_large_box_2000_8/: SI10.csv  SI100.csv  SI1000.csv  SI2.csv  SI20.csv  SI200.csv  SI5.csv  SI500.csv  contact_change.csv  contact_change_dyn.csv  contact_change_maxN.csv
Code_and_Data/DerivativeErrorData/piston_block_1000_3/: SI10.csv  SI100.csv  SI1000.csv  SI2.csv  SI20.csv  SI200.csv  SI5.csv  SI500.csv  contact_change.csv  contact_change_dyn.csv  contact_change_maxN.csv
Code_and_Data/DerivativeErrorData/pushing_low_clutter_1000_3/: SI10.csv  SI100.csv  SI1000.csv  SI2.csv  SI20.csv  SI200.csv  SI5.csv  SI500.csv  contact_change.csv  contact_change_dyn.csv  contact_change_maxN.csv
Code_and_Data/DerivativeErrorData/pushing_moderate_clutter_1000_3/: SI10.csv  SI100.csv  SI1000.csv  SI2.csv  SI20.csv  SI200.csv  SI5.csv  SI500.csv  contact_change.csv  contact_change_dyn.csv  contact_change_maxN.csv
Code_and_Data/DerivativeErrorData/pushing_no_clutter_1000_3/: SI10.csv  SI100.csv  SI1000.csv  SI2.csv  SI20.csv  SI200.csv  SI5.csv  SI500.csv  contact_change.csv  contact_change_dyn.csv  contact_change_maxN.csv
Code_and_Data/DerivativeErrorData/walker_run_200_3/: SI10.csv  SI100.csv  SI2.csv  SI20.csv  SI5.csv  SI500.csv  contact_change.csv  contact_change_dyn.csv  contact_change_maxN.csv
Code_and_Data/PaperData/: plot_iLQR_SCVX_iteration_timings.py
Code_and_Data/PaperData/SCVX/: knots_trust_region_settings
Code_and_Data/PaperData/iLQR-AD/: plotting.py
Code_and_Data/PaperData/iLQR-FD/: plot_asynchronous_MPC_results.py  plot_iLQR_keypoint_results.py  plot_stiffness_opt_results.py
Code_and_Data/TaskConfigs/free_motion/: LWR_reaching.yaml  reaching.yaml
Code_and_Data/TaskConfigs/impact_manipulation/: impact_large_box.yaml
Code_and_Data/TaskConfigs/locomotion/: anyMal.yaml  humanoid.yaml  run_plane.yaml  walk_plane.yaml
Code_and_Data/TaskConfigs/rigid_body_manipulation/: bimanual_pickup.yaml  box_sweep.yaml  place_heavy_clutter.yaml  place_low_clutter.yaml  twoD_push_heavy_clutter.yaml  twoD_push_light_clutter.yaml  twoD_push_no_clutter.yaml
Code_and_Data/TaskConfigs/toys/: acrobot.yaml  articulated_contact.yaml  piston.yaml  piston_box.yaml
Code_and_Data/TestTasks/acrobot/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
Code_and_Data/TestTasks/anyMal/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
Code_and_Data/TestTasks/bimanual_pickup/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
Code_and_Data/TestTasks/impact_large_box/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
Code_and_Data/TestTasks/place_heavy_clutter/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
Code_and_Data/TestTasks/walker_run/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
Code_and_Data/generalConfigs/: default.yaml
Code_and_Data/include/: GAOptimalKeypoints.h  GenTestingData.h  KeyPointGenerator.h  MuJoCoHelper.h  StdInclude.h
Code_and_Data/include/ModelTranslator/: Acrobot.h  ArticulatedContact.h  BimanualPickup.h  ImpactLargeBox.h  LWR_reaching.h  ModelTranslator.h  Piston.h  PlaceObject.h  anyMal.h
Code_and_Data/include/Optimiser/: Optimiser.h  SCVX.h  iLQR.h  iLQR_SVR.h
Code_and_Data/mujoco_models/: README.md
Code_and_Data/mujoco_models/Franka_emika_scenes_V1/: bimanual_pickup.xml  boxSweep.xml  box_impact.xml  cylinder_pushing.xml  cylinder_pushing_heavyClutter.xml  cylinder_pushing_lowClutter.xml
Code_and_Data/mujoco_models/Piston_block/: piston_block.xml
Code_and_Data/mujoco_models/anyMal/: anymal_b.xml
Code_and_Data/src/: GAOptimalKeypoints.cpp  GenTestingData.cpp  benchmark_derivatives.cpp  contact_stiffness_test.cpp  derivative_error_analysis.cpp  figure_1_data_generator.cpp  main.cpp  toy_contact_analysis.cpp
Code_and_Data/src/FileHandler/: FileHandler.cpp
Code_and_Data/src/KeyPointGenerator/: KeyPointGenerator.cpp
(+48463 files in other folders)
